--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -33,7 +33,7 @@
   position: sticky;
   bottom: 0;
   background: #fff;
-  padding: 1rem;
+  padding: 1rem 0px;  
   display: flex;
   justify-content: flex-end;
   gap: 0.5rem;
