--- a/src/app/pages/cuentas/cuentas.component.html
+++ b/src/app/pages/cuentas/cuentas.component.html
@@ -1,24 +1,23 @@
 <div class="card">
-    <button pButton label="Filtrar" icon="pi pi-filter" (click)="mostrarFiltro = !mostrarFiltro">
-    </button>
     <!-- Div de filtros -->
     <form [formGroup]="formBusqueda" novalidate>
-        <div *ngIf="mostrarFiltro" class="grid grid-cols-12 gap-4 items-end">
-            <div class="col-span-3">
+        <button pButton label="Filtrar" icon="pi pi-filter" (click)="mostrarFiltro = !mostrarFiltro">
+        </button>
+        <div *ngIf="mostrarFiltro" class="grid grid-flow-row-dense sm:grid-cols-1 md:grid-cols-4 gap-4">
+            <div class="md:col-span-1">
                 <label class="block mb-1 text-sm">Tipo de Búsqueda</label>
                 <p-select class="w-full" formControlName="tipoFiltro" (onChange)="changeModelTipoDocumento($event)"
                     [options]="tipoBusqueda" optionLabel="field" optionValue="id"
                     placeholder="Seleccione Tipo de Búsqueda">
                 </p-select>
             </div>
-
-            <div class="col-span-3" *ngIf="formBusqueda.value.tipoFiltro == '0'">
+            <div class="md:col-span-1" *ngIf="formBusqueda.value.tipoFiltro == '0'">
                 <label class="block mb-1 text-sm">Tipo Documento</label>
                 <p-select class="w-full" formControlName="tipoDocumento" (onChange)="changeModelTipoDocumento($event)"
                     [options]="documentos" optionLabel="descripcion" optionValue="id" placeholder="Seleccione tipo">
                 </p-select>
             </div>
-            <div class="col-span-3" *ngIf="formBusqueda.value.tipoFiltro == '0'">
+            <div class="md:col-span-1" *ngIf="formBusqueda.value.tipoFiltro == '0'">
                 <label class="block mb-1 text-sm">N° Documento</label>
                 <input class="w-full" formControlName="nroDocumento" #doc pInputText type="text"
                     placeholder="Ingrese N° Documento" [attr.minlength]="nroCaracter" [attr.maxlength]="nroCaracter"
@@ -28,7 +27,7 @@
                     {{ doc.value.length || 0 }} / {{ nroCaracter }}
                 </small> -->
             </div>
-            <div class="col-span-3" *ngIf="formBusqueda.value.tipoFiltro == '3'">
+            <div class="col-span-1" *ngIf="formBusqueda.value.tipoFiltro == '3'">
                 <label class="block mb-1 text-sm">Nro Tarjeta</label>
                 <input class="w-full" formControlName="nroCuenta" #accountTarjeta pInputText type="text"
                     placeholder="Ingrese Nro Tarjeta" [attr.minlength]="16" [attr.maxlength]="16" autocomplete="off"
@@ -37,7 +36,7 @@
                     {{ accountTarjeta.value.length || 0 }} / {{ nroCaracter }}
                 </small> -->
             </div>
-            <div class="col-span-6 flex items-end justify-end gap-2">
+            <div class="col-span-1 flex items-end justify-end gap-2">
                 <!-- Botones -->
                 <button pButton label="Buscar" icon="pi pi-search" (click)="buscar()">
                 </button>
@@ -45,15 +44,15 @@
                 </button>
             </div>
         </div>
-    </form>    
+    </form>
     <br>
     <br>
-    <p-table #dt1 [value]="datosCuentas"    
-       
+    <p-table #dt1 [value]="datosCuentas"
+        class="mi-tabla-personalizada"
         currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
-        [showCurrentPageReport]="true"
-        dataKey="idCuenta" [rows]="10" [columns]="cols" [loading]="loading" [rowHover]="true"
-        [showGridlines]="true" [paginator]="true" responsiveLayout="scroll" [totalRecords]="datosCuentas.length">
+        [showCurrentPageReport]="true" dataKey="idCuenta" [rows]="10" [columns]="cols" [loading]="loading"
+        [rowHover]="true" [showGridlines]="true" [paginator]="true" responsiveLayout="scroll"
+        [totalRecords]="datosCuentas.length">
         <ng-template #header let-columns>
             <tr>
                 <th *ngFor="let col of columns" [ngStyle]="{'text-align': col.align}">
@@ -61,9 +60,8 @@
                 </th>
             </tr>
         </ng-template>
-        <ng-template #body let-rowData
-                            style="cursor: pointer;">
-            <tr  [pContextMenuRow]="rowData" (click)="goToAccount(rowData)">
+        <ng-template #body let-rowData style="cursor: pointer;">
+            <tr [pContextMenuRow]="rowData" (click)="goToAccount(rowData)">
                 <td>{{ rowData.producto }}</td>
                 <td>{{rowData.nombresApellidos}}</td>
                 <td style="text-align: center;">{{rowData.numeroCuenta}}</td>
@@ -72,8 +70,8 @@
                                      rowData.codEstadoCuenta == '02' ? 'p-tag p-tag-warning': 'p-tag p-tag-danger'"
                         style="font-size: 12px;">{{rowData.motivoBloqueo}}</span>
                 </td>
-                <td style="text-align: center;">{{rowData.fechaApertura }}</td>
-                <td style="text-align: center;">{{rowData.fechaBaja }}</td>
+                <td style="text-align: center;">{{rowData.fechaApertura| date:'dd/MM/yyyy HH:mm:ss' }}</td>
+                <td style="text-align: center;">{{rowData.fechaBaja | date:'dd/MM/yyyy HH:mm:ss'}}</td>
                 <td style="text-align: center;">{{rowData.desCodTipoDoc}}</td>
                 <td style="text-align: center;">{{rowData.numDocIdentidad}}</td>
             </tr>
