--- a/src/app/pages/cuentas/cuentas.component.html
+++ b/src/app/pages/cuentas/cuentas.component.html
@@ -3,7 +3,8 @@
     <form [formGroup]="formBusqueda" novalidate>
         <button pButton label="Filtrar" icon="pi pi-filter" (click)="mostrarFiltro = !mostrarFiltro">
         </button>
-        <div *ngIf="mostrarFiltro" class="grid grid-flow-row-dense sm:grid-cols-1 md:grid-cols-4 gap-4">
+        
+        <div *ngIf="mostrarFiltro" class="grid grid-flow-row-dense sm:grid-cols-1 md:grid-cols-4 gap-4 mt-4">
             <div class="md:col-span-1">
                 <label class="block mb-1 text-sm">Tipo de Búsqueda</label>
                 <p-select class="w-full" formControlName="tipoFiltro" (onChange)="changeModelTipoDocumento($event)"
@@ -25,16 +26,18 @@
                     oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" />
                 <!-- <small class="text-gray-500 text-xs text-right" *ngIf="nroCaracter !== 0">
                     {{ doc.value.length || 0 }} / {{ nroCaracter }}
-                </small> -->
-            </div>
-            <div class="col-span-1" *ngIf="formBusqueda.value.tipoFiltro == '3'">
+                </small> -->       
+            </div>   
+            <!-- {{formBusqueda.value!.tipoFiltro}}
+            {{ formBusqueda.value.tipoFiltro === 3? 'md:col-span-1' : 'md:col-span-2'}}          -->
+            <div 
+            *ngIf="formBusqueda.value.tipoFiltro == '3'"
+            [ngClass]="formBusqueda.value!.tipoFiltro == 3 ? 'md:col-span-1' : 'md:col-span-2'"
+            >
                 <label class="block mb-1 text-sm">Nro Tarjeta</label>
                 <input class="w-full" formControlName="nroCuenta" #accountTarjeta pInputText type="text"
                     placeholder="Ingrese Nro Tarjeta" [attr.minlength]="16" [attr.maxlength]="16" autocomplete="off"
-                    oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" />
-                <!-- <small class="text-gray-500 text-xs text-right" *ngIf="nroCaracter !== 0">
-                    {{ accountTarjeta.value.length || 0 }} / {{ nroCaracter }}
-                </small> -->
+                    oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" />                                 
             </div>
             <div class="col-span-1 flex items-end justify-end gap-2">
                 <!-- Botones -->
