--- a/src/app/pages/mantenimiento/proveedor/edit-proveedor/edit-proveedor.component.html
+++ b/src/app/pages/mantenimiento/proveedor/edit-proveedor/edit-proveedor.component.html
@@ -257,6 +257,6 @@
         </p-tabs>
     </div>
     <div class="md:col-span-1 flex items-end justify-end  footer-modal">
-        <p-button label="putProveedor" (click)="putProveedor()" />
+        <p-button label="Actualizar" (click)="putProveedor()" />
     </div>
 </div>
