--- a/src/app/pages/mantenimiento/cambiomoneda/modals/add-cambiomoneda/add-cambiomoneda.component.html
+++ b/src/app/pages/mantenimiento/cambiomoneda/modals/add-cambiomoneda/add-cambiomoneda.component.html
@@ -1,13 +1,13 @@
 <p-toast></p-toast>
 <br>
 
-<div class="grid grid-flow-row-dense sm:grid-cols-1 md:grid-cols-2 gap-4">
-    <form [formGroup]="formAddCabecera" novalidate>
 
+<form [formGroup]="formAddCabecera" novalidate>
+    <div class="grid grid-flow-row-dense sm:grid-cols-1 md:grid-cols-2 gap-4">
         <div class="md:col-span-1">
-            <label>Codigo Campaña: &nbsp;</label>
-            <input type="text" autocomplete="off" pInputText name="codigoCampania" formControlName="codigoCampana"
-                readonly="readonly">
+            <label class="block mb-1 text-sm">Codigo Campaña: &nbsp;</label>
+            <input class="w-full" type="text" autocomplete="off" pInputText name="codigoCampania"
+                formControlName="codigoCampana" readonly="readonly">
             <p-message
                 *ngIf="formAddCabecera.get('codigoCampana')?.dirty && formAddCabecera.get('codigoCampana')?.hasError('required')"
                 severity="error" text="Es requerido">
@@ -18,8 +18,9 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1">
-            <label>Nombre Campaña: &nbsp;</label>
-            <input type="text" autocomplete="off" pInputText name="nombreCampania" formControlName="nombreCampania">
+            <label class="block mb-1 text-sm">Nombre Campaña: &nbsp;</label>
+            <input class="w-full" type="text" autocomplete="off" pInputText name="nombreCampania"
+                formControlName="nombreCampania">
             <p-message
                 *ngIf="formAddCabecera.get('nombreCampania')?.dirty && formAddCabecera.get('nombreCampania')?.hasError('required')"
                 severity="error" text="Es requerido">
@@ -30,10 +31,10 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1">
-            <label>Tipo de Campaña</label>
-            <p-autoComplete name="tipoCampania" formControlName="tipoCampania"
+            <label class="block mb-1 text-sm">Tipo de Campaña</label>
+            <p-autoComplete class="w-full" name="tipoCampania" formControlName="tipoCampania"
                 (ngModelChange)="changeTipoCampania($event)" [suggestions]="filteredElementTipoCampania"
-                (completeMethod)="filterElementTipoCampania($event)" field="nombre" emptyMessage='Sin resultados'
+                (completeMethod)="filterElementTipoCampania($event)" optionLabel="nombre" emptyMessage='Sin resultados'
                 [dropdown]="true" appendTo="body">
                 <ng-template let-element>
                     <div>{{element.nombre}}</div>
@@ -48,8 +49,8 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1">
-            <label>Estado Campaña</label>
-            <p-autoComplete name="estadoCampania" formControlName="estadoCampania" field="nombre"
+            <label class="block mb-1 text-sm">Estado Campaña</label>
+            <p-autoComplete class="w-full" name="estadoCampania" formControlName="estadoCampania" optionLabel="nombre"
                 emptyMessage='Sin resultados' [dropdown]="true" appendTo="body">
                 <ng-template let-element>
                     <div>{{element.nombre}}</div>
@@ -66,9 +67,9 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1" *ngIf="formAddCabecera?.value.tipoCampania?.id == '01'">
-            <label>TC Compra OH: &nbsp;</label>
-            <input type="text" autocomplete="off" pInputText name="tcCompra" formControlName="tcCompra" pInputText
-                autocomplete="off" pKeyFilter="num">
+            <label class="block mb-1 text-sm">TC Compra OH: &nbsp;</label>
+            <input class="w-full" type="text" autocomplete="off" pInputText name="tcCompra" formControlName="tcCompra"
+                pInputText autocomplete="off" pKeyFilter="num">
             <p-message
                 *ngIf="formAddCabecera.get('tcCompra')?.dirty && formAddCabecera.get('tcCompra')?.hasError('required')"
                 severity="error" text="Es requerido">
@@ -89,9 +90,9 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1" *ngIf="formAddCabecera?.value.tipoCampania?.id == '01'">
-            <label>TC Venta OH: &nbsp;</label>
-            <input type="text" autocomplete="off" pInputText name="tcVenta" formControlName="tcVenta" pInputText
-                autocomplete="off" pKeyFilter="num">
+            <label class="block mb-1 text-sm">TC Venta OH: &nbsp;</label>
+            <input class="w-full" type="text" autocomplete="off" pInputText name="tcVenta" formControlName="tcVenta"
+                pInputText autocomplete="off" pKeyFilter="num">
 
             <p-message
                 *ngIf="formAddCabecera.get('tcVenta')?.dirty && formAddCabecera.get('tcVenta')?.hasError('required')"
@@ -113,9 +114,9 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1" *ngIf="formAddCabecera?.value.tipoCampania?.id == '02'">
-            <label>Tasa Compra: &nbsp;</label>
-            <input type="text" autocomplete="off" pInputText name="tasaCompra" formControlName="tasaCompra" pInputText
-                autocomplete="off" pKeyFilter="num">
+            <label class="block mb-1 text-sm">Tasa Compra: &nbsp;</label>
+            <input class="w-full" type="text" autocomplete="off" pInputText name="tasaCompra"
+                formControlName="tasaCompra" pInputText autocomplete="off" pKeyFilter="num">
             <p-message
                 *ngIf="formAddCabecera.get('tasaCompra')?.dirty && formAddCabecera.get('tasaCompra')?.hasError('required')"
                 severity="error" text="Es requerido">
@@ -135,9 +136,9 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1" *ngIf="formAddCabecera?.value.tipoCampania?.id == '02'">
-            <label>Tasa Venta: &nbsp;</label>
-            <input type="text" autocomplete="off" pInputText name="tasaVenta" formControlName="tasaVenta" pInputText
-                autocomplete="off" pKeyFilter="num">
+            <label class="block mb-1 text-sm">Tasa Venta: &nbsp;</label>
+            <input class="w-full" type="text" autocomplete="off" pInputText name="tasaVenta" formControlName="tasaVenta"
+                pInputText autocomplete="off" pKeyFilter="num">
             <p-message
                 *ngIf="formAddCabecera.get('tasaVenta')?.dirty && formAddCabecera.get('tasaVenta')?.hasError('required')"
                 severity="error" text="Es requerido">
@@ -157,10 +158,10 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1">
-            <label>Tipo de Validación</label>
-            <p-autoComplete name="tipoValidacion" formControlName="tipoValidacion"
+            <label class="block mb-1 text-sm">Tipo de Validación</label>
+            <p-autoComplete class="w-full" name="tipoValidacion" formControlName="tipoValidacion"
                 [suggestions]="filteredElementTipoValidacion" (completeMethod)="filterElementTipoValidacion($event)"
-                field="nombre" (ngModelChange)="changeModelTipoValidacion($event)" emptyMessage='Sin resultados'
+                optionLabel="nombre" (ngModelChange)="changeModelTipoValidacion($event)" emptyMessage='Sin resultados'
                 [dropdown]="true" appendTo="body">
                 <ng-template let-element>
                     <div>{{element.nombre}}</div>
@@ -177,9 +178,10 @@
             </mat-error> -->
         </div>
         <div class="md:col-span-1">
-            <label>Monto Validación: &nbsp;</label>
-            <input type="text" autocomplete="off" pInputText name="montoValidacion" autocomplete="off" pKeyFilter="num"
-                [disabled]="formAddCabecera!.value.tipoValidacion?.id != '04'" formControlName="montoValidacion">
+            <label class="block mb-1 text-sm">Monto Validación: &nbsp;</label>
+            <input class="w-full" type="text" autocomplete="off" pInputText name="montoValidacion" autocomplete="off"
+                pKeyFilter="num" [disabled]="formAddCabecera!.value.tipoValidacion?.id != '04'"
+                formControlName="montoValidacion">
             <p-message
                 *ngIf="formAddCabecera.get('montoValidacion')?.dirty && formAddCabecera.get('montoValidacion')?.hasError('required')"
                 severity="error" text="Es requerido">
@@ -199,18 +201,16 @@
             </mat-error> -->
         </div>
         <div class="p-col-5">
-            <label>Fecha Inicio</label>
-            <br>
-            <p-calendar formControlName="fechaInicio" dateFormat="dd/mm/yy" (ngModelChange)="changeModelFecha()"
-                appendTo="body" yearRange="2020:2050" inputId="monthpicker">
-            </p-calendar>
+            <label class="block mb-1 text-sm">Fecha Inicio</label>            
+            <p-datepicker class="w-full" formControlName="fechaInicio" dateFormat="dd/mm/yy"
+                (ngModelChange)="changeModelFecha()"  yearRange="2020:2050" inputId="monthpicker">
+            </p-datepicker>
         </div>
         <div class="p-col-5">
-            <label>Fecha Fin</label>
-            <br>
-            <p-calendar formControlName="fechaFin" dateFormat="dd/mm/yy" (ngModelChange)="changeModelFecha()"
-                appendTo="body" yearRange="2020:2050" inputId="monthpicker">
-            </p-calendar>
+            <label class="block mb-1 text-sm">Fecha Fin</label>            
+            <p-datepicker class="w-full" formControlName="fechaFin" dateFormat="dd/mm/yy"
+                (ngModelChange)="changeModelFecha()" appendTo="body" yearRange="2020:2050" inputId="monthpicker">
+            </p-datepicker>
         </div>
         <div class="p-col-2">
             <br><br>
@@ -218,13 +218,15 @@
                 (click)="grabarCabecera()">Guardar
             </button>
         </div>
-    </form>
-    <form [formGroup]="formAddDetalle" novalidate>
+    </div>
+</form>
+<form [formGroup]="formAddDetalle" novalidate>
+    <div class="grid grid-flow-row-dense sm:grid-cols-1 md:grid-cols-2 gap-4">
         <div class="md:col-span-1">
-            <label>Dia</label>
-            <p-autoComplete name="diasSemana" formControlName="diasSemana" [suggestions]="filteredElementDias"
-                (completeMethod)="filterElementDias($event)" field="nombre" emptyMessage='Sin resultados'
-                [dropdown]="true" appendTo="body">
+            <label class="block mb-1 text-sm">Dia</label>
+            <p-autoComplete class="w-full" name="diasSemana" formControlName="diasSemana"
+                [suggestions]="filteredElementDias" (completeMethod)="filterElementDias($event)" optionLabel="nombre"
+                emptyMessage='Sin resultados' [dropdown]="true" appendTo="body">
                 <ng-template let-element>
                     <div>{{element.nombre}}</div>
                 </ng-template>
@@ -251,8 +253,8 @@
                 [disabled]="!(formAddDetalle!.valid) || idCambioMonedaCampana == 0" (click)="agregarDetalle()">Agregar
             </button>
         </div>
-    </form>
-</div>
+    </div>
+</form>
 <div class="grid grid-flow-row-dense sm:grid-cols-1 md:grid-cols-2 gap-4">
     <div class="md:col-span-2">
         <p-table [value]="detallesCampania" resizableColumns="true">
